@@ -1,5 +1,10 @@
 2006-09-11  Mikael Hallendal  <micke@imendio.com>
 
+	* loudmouth/lm-utils.c: (_lm_utils_generate_id):
+	- Generate more unique IDs, fixes LM-56.
+
+2006-09-11  Mikael Hallendal  <micke@imendio.com>
+
 	* Release 1.1.3
 
 2006-09-11  Mikael Hallendal  <micke@imendio.com>
